<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotx_planner_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for planners in martime robotx challenge</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>launch_ros</depend>
  <exec_depen>robotx_bt_planner</exec_depen>
  <exec_depen>hermite_path_planner_bringup</exec_depen>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
